# PNG-Editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
include/: bytes.h  chunks.h  functions.h  logging.h  misc.h  structs.h
src/: bytes.c  chunks.c  functions.c  misc.c
